# quant-proofs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPENDENCY_GRAPH.md  INCONSISTENCIES.md  LICENSE  README.md  RISKS.md  START_HERE.md  _typos.toml  lakefile.lean
.claude/: settings.json
.github/: dependabot.yml
archive/: README.md
backtest-proofs/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT.md  DISCLAIMER.md  LICENSE  Makefile  README.md  RISKS.md
binomial-proofs/: BinomialModel.lean  BinomialProofs.lean  CLAUDE.md  README.md  lakefile.lean
data/: README.md
docs/: _config.yml  _toc.yml  backtest-proofs.md  binomial-proofs.md  formal_guarantees.md  ftap-proofs.md  how-we-verify.md  implementation_plan.md  index.html  intro.md  mortgage-proofs.md  options-proofs.md  pillar-ai-systems.md  pillar-optimization.md  pillar-pricing.md  pillar-research-integrity.md  quant-core.md  strip_quarto_html.py  summer_capstone_prep_plan.md  verified_optimizer_vision.md
foundations/quant-core/python/: README.md  pyproject.toml
foundations/quant-core/python/src/quant_core/: __init__.py
foundations/quant-core/python/src/quant_core/pricer/: black_scholes.py
foundations/quant-core/python/tests/: test_simulator.py
portfolio-proofs/: .coverage  CLAUDE.md  README.md  coverage.xml  docker-compose.yml  lean_pgd.py  lean_pgd_direct.py  lean_pgd_ffi.py  pyproject.toml  time_all_solvers.py
portfolio-proofs/.dvc/: config
portfolio-proofs/data/: .gitignore  README.md
portfolio-proofs/reports/: benchmark_all_solvers.py  lean_pgd_performance.md  lean_pgd_performance.qmd  regenerate_lean_pgd.py
portfolio-proofs/results/: benchmark_all_solvers.json  lean_pgd_benchmark.json
portfolio-proofs/scenarios/boundary_trap/: README.md  august_2007_reconstruction.py  boundary_trap.md  boundary_trap.qmd  gurobi_interior_point.py  scipy_slsqp.py  scipy_trust_constr.py
portfolio-proofs/scenarios/boundary_trap/solvers/: __init__.py  gurobi.py  kkt_optimum.py  ortools_pdlp.py  slsqp.py  trust_constr.py
portfolio-proofs/scenarios/cholesky_crash/: README.md  cholesky_crash.md  cholesky_crash.qmd  cvxpy_osqp.py  gurobi_non_psd.py  scipy_slsqp.py
portfolio-proofs/scenarios/cholesky_crash/solvers/: __init__.py  common.py  cvxpy_osqp.py  gurobi.py  pgd_lw.py  slsqp.py  trust_constr.py
portfolio-proofs/scenarios/phantom_positions/: phantom_positions.md  phantom_positions.qmd
portfolio-proofs/scenarios/phantom_positions/solvers/: certified_pgd.py  gurobi.py  slsqp.py  trust_constr.py
portfolio-proofs/scenarios/precision_bleed/: README.md  cvxpy_float.py  precision_bleed.md  precision_bleed.qmd  scipy_slsqp.py
portfolio-proofs/scenarios/precision_bleed/solvers/: __init__.py  common.py  gurobi.py  lean_pgd.py  ortools_gscip.py  pgd_integer.py  slsqp_float.py  trust_constr.py
portfolio-proofs/scenarios/scenario_1_cholesky_crash/: cvxpy_osqp.py  gurobi_non_psd.py  scipy_slsqp.py
portfolio-proofs/scenarios/scenario_2_boundary_trap/: gurobi_interior_point.py  scipy_slsqp.py  scipy_trust_constr.py
portfolio-proofs/scenarios/scenario_3_precision_bleed/: cvxpy_float.py  scipy_slsqp.py
portfolio-proofs/scenarios/scenario_4_step_divergence/: unverified_gd.py
portfolio-proofs/scenarios/sp500_factor/: sp500_factor.qmd
portfolio-proofs/scenarios/sp500_factor/solvers/: common.py  kkt_woodbury.py  pgd_reference.py
portfolio-proofs/scenarios/step_divergence/: README.md  step_divergence.md  step_divergence.qmd  unverified_gd.py
portfolio-proofs/scenarios/step_divergence/solvers/: __init__.py  gd_fixed.py  gurobi.py  kkt_optimum.py  pgd_adaptive.py  slsqp.py  trust_constr.py
portfolio-proofs/scenarios/vix_shock/: vix_shock.qmd
portfolio-proofs/scenarios/vix_shock/solvers/: certified_pgd.py  gurobi.py  slsqp.py  uncertified_gd.py
portfolio-proofs/showcase/: demonstrate_lean_advantage.py  stressed_solver_master.py
portfolio-proofs/tests/: __init__.py  test_lean_pgd.py  test_lean_pgd_properties.py
python/: Makefile  README.md  pyproject.toml
python/src/verified_options_backtest/backtest/: __init__.py  runner.py
python/src/verified_options_backtest/etl/: wrds_loader.py
python/src/verified_options_backtest/pricer/: __init__.py
python/src/verified_options_backtest/simulator/: __init__.py  gbm.py
python/tests/: test_audit.py  test_backtest.py  test_edge_cases.py
research-pipeline/: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
research-pipeline/lean/: ResearchPipeline.lean  lake-manifest.json  lakefile.lean
research-pipeline/lean/ResearchPipeline/: Bridge.lean  Measurability.lean  NoLeakage.lean  NoLookahead.lean
research-pipeline/scripts/: compare_combine.py  compare_pgd.py  run_cross_asset.py  run_demo.py  run_study.py
research-pipeline/src/research_pipeline/: __init__.py  backtest.py  cli.py  combination.py  costs.py  crossasset.py  data.py  data_sources.py  evaluation.py  oos.py  portfolio.py  signals.py  stats.py  strategy.py  study.py  validation.py
research-pipeline/studies/: LEAKAGE_MAP.md  REPORT.md  WRDS_DATA_REQUEST.md  results_combine_tsmom.json  results_combine_vme.json  results_crossasset.json  results_crossasset_vme.json  results_ken_french_49ind.json  results_pgd_comparison.json  results_pgd_comparison_monthly.json
research-pipeline/studies/commodity-leakage-tax/: README.md  README_eia.md  results_leakage_tax.json  results_leakage_tax_eia.json  run_study.py  run_study_eia.py  test_leakage_tax.py  test_leakage_tax_eia.py
research-pipeline/studies/macro-leakage/: .gitignore  README.md  results_leakage_tax_macro.json  results_leakage_tax_threshold.json  run_study_macro.py  run_study_threshold.py  test_leakage_tax_macro.py  test_leakage_tax_threshold.py
research-pipeline/studies/vrp/: .gitignore  README.md  run_study.py
research-pipeline/tests/: test_backtest.py  test_cli.py  test_combination.py  test_crossasset.py  test_no_lookahead.py  test_oos.py  test_portfolio.py  test_properties.py  test_reference.py  test_stats.py  test_strategy.py  test_study_general.py  test_validation.py
(+497 files in other folders)
