[project]
name = "portfolio-proofs"
version = "0.1.0"
description = "Modular failure scenarios and quantitative allocation wrappers for the formally verified PGD solver core"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Akhil Karra" }
]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "yfinance>=1.4.0",
    "dvc[s3]>=3.67.1",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.9",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "nbclient>=0.10.4",
    "ipykernel>=7.2.0",
    "ortools>=9.15.6755",
    "gurobipy>=13.0.2",
    "cython>=3.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "hypothesis>=6.100.0",
    "interrogate>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
